// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
(require('./foo'): number);

=====================================output=====================================
// @flow
(require("./foo"): number);

================================================================================
`;

exports[`dependency.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
module.exports = ("hello": number);

=====================================output=====================================
// @flow
module.exports = ("hello": number);

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
require('./bar');
module.exports = 0;

=====================================output=====================================
// @flow
require("./bar");
module.exports = 0;

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
require('./unchecked-dependency');
(require('./dependency'): string);

=====================================output=====================================
// @flow
require("./unchecked-dependency");
(require("./dependency"): string);

================================================================================
`;

exports[`unchecked-dependency.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`unsaved_foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
require('./bar');
module.exports = "hello";

=====================================output=====================================
// @flow
require("./bar");
module.exports = "hello";

================================================================================
`;
